# EasyView

./: .gitignore  CMakeLists.txt  main.cpp
include/: Application.h  MainWindow.h
include/bars/: MenuBar.h  TitleBar.h
include/buttons/: PushButton.h
include/menu/: FileMenu.h
include/menus/: FileMenu.h
include/windows/: MainWindow.h
resources/: styles.css
src/: Application.cpp  CMakeLists.txt  MainWindow.cpp
src/bar/: CMakeLists.txt  MenuBar.cpp
src/bars/: CMakeLists.txt  MenuBar.cpp  TitleBar.cpp
src/buttons/: CMakeLists.txt  PushButton.cpp
src/menu/: CMakeLists.txt  FileMenu.cpp
src/menus/: CMakeLists.txt  FileMenu.cpp
src/windows/: CMakeLists.txt  MainWindow.cpp
